# bangkit-agentic

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  package-lock.json  package.json
ai-service/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  pyproject.toml
ai-service/app/: config.py  main.py  observability.py  security.py
ai-service/app/api/: agent.py  health.py
ai-service/app/graph/: build.py  deps.py  nodes.py  state.py  supervisor.py
ai-service/app/llm/: groq_client.py  router.py
ai-service/app/rag/: chunking.py  embeddings.py  ingest.py  keyword.py  retriever.py  store.py
ai-service/app/schemas/: quiz.py  visual.py
ai-service/bangkit_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-service/evals/: README.md  metrics.py  runner.py
ai-service/evals/datasets/: marking_golden.jsonl  tutor_golden.jsonl
ai-service/scripts/: export_content.mjs  resolve_extless.mjs  run_export.mjs
ai-service/tests/: __init__.py  test_agent_api.py  test_chunking.py  test_evals.py  test_graph.py  test_health.py  test_keyword.py  test_multimodal.py  test_presenter.py  test_retriever.py  test_router.py  test_security.py
app/: globals.css  layout.js  page.js
components/: AIToolsPanelEnhanced.jsx  ChapterNavigation.jsx  KnowledgeGraph.jsx  KnowledgeGraphReactFlow.jsx  MockExamModal.jsx  StudyArtifactCard.jsx  SubjectLearningPage.jsx
data/: chapter2-maths.js  chapter3.js  chaptersDataMath.js  knowledgeGraphData.js  kupasanJawapanSpm2024.js  subjects.js
web/: .gitignore  package-lock.json  package.json
(+24 files in other folders)
