[project]
name = "bangkit-ai-service"
version = "0.1.0"
description = "Multi-agent AI service for the Bangkit learning platform (FastAPI + LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "groq>=0.9",
    "langgraph>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
