[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bangkit-ai-service"
version = "0.1.0"
description = "Multi-agent AI service for the Bangkit learning platform (FastAPI + LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "groq>=0.9",
    "langgraph>=1.0",
    "fastembed>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["app*", "evals*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
